fixed the about section page for dark mode and checked all the dark mode buttons

--- a/styles/about.css
+++ b/styles/about.css
@@ -4,15 +4,14 @@
     color:#0077b6;
     text-align: center;
     padding: 2rem;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     margin-bottom: 0rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
-    font-size: 30px;
+    font-size: 30px;    
 }
 
-.about-section h1 {
-
+.about-section-search{
+    display: flex;
 }
 
 /* Content Section */
